--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jira_api"
-version = "1.0.5"
+version = "1.0.6"
 edition = "2021"
 
 [dependencies]
@@ -14,4 +14,4 @@ log = "0.4"
 serde_json = "1.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-auth = { git = "https://github.com/chipp/auth", tag = "2.0.1" }
+chipp_auth = "2.0"
